--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
     <head>Smarty Pants Consulting</head>
-    <body>Consulting Work</body>
+    <body>
+        <center>
+        Consulting Work
+        </center>
+    </body>
 </html>
 
